# EssaCMS

./: Cargo.toml
docs/: index.md
example_site/pages/: about.html  index.html
example_site/public/: style.css
example_site/templates/: main.html
src/: main.rs
