[package]
name = "essa-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["macros", "rt", "full"] }
tower-http = { version = "0.4.1", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
